--- a/WebApi/wwwroot/email/ForgotPasswordTemplate.html
+++ b/WebApi/wwwroot/email/ForgotPasswordTemplate.html
@@ -660,7 +660,7 @@ img,p{margin:0;Margin:0;font-family:Fira Sans,BlinkMacSystemFont,Segoe UI,Helvet
                                                                     <!--[if mso]><td class="t26" style="width:400;"><![endif]-->
                                                                     <p class="t25"
                                                                         style="margin:0;Margin:0;font-family:Inter Tight,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:18px;font-weight:400;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;direction:ltr;color:#555555;text-align:center;">
-                                                                        © 2024 Victor Lyalchuk, Inc. All rights
+                                                                        © 2024 Estro Shop Team, Inc. All rights
                                                                         reserved.</p>
                                                                 </td>
                                                             </tr>
